tests/compilefail93.pas
program compilefail93(output);
{invalid constant}
const
	4 = 7;
begin
	writeln(4);
end.
